# fake-mail-server

./: .gitignore  Cargo.toml  README.md  config.ron  deny.toml  revert: Revert port change in config.ron
.github/workflows/: ci.yml
certs/: README.md  example.org-key.pem  example.org.p12  example.org.pem  rootCA.pem
mails/: alternative.eml  mail_1.eml  mail_2.eml  mail_3.eml  mail_multipart.eml  mixed.eml
scripts/android/: monkey_swipe.py
scripts/macos/: macos.py
scripts/oracles/: .gitignore  README.md  bb.py  create_smime_cert_and_mail.sh  empty_line_oracle.py  empty_line_sim.py  hex.mail  mail_generator.py  pgp_oracles.py  requirements.txt  secret.mail  server.py  smime_lib.py  smime_oracles.py
scripts/samsung/: monkey_swipe.py  reset.sh  setup.py
src/: config.rs  lib.rs  log.rs  main.rs  predictor.rs
src/imap/: account.rs  config.rs  mod.rs  responses.rs
src/oracles/: mod.rs
src/pop3/: config.rs  mod.rs
src/smtp/: config.rs  mod.rs
testcases/imap/: oracles.ron  setup.ron  setup_compression.ron  setup_opportunistic_encryption.ron  tls_setup.ron
testcases/imap/Buffering/: B_1.ron  B_2.ron  B_3.ron
testcases/imap/Negotiation/: D_1.ron  D_2.ron  D_3.ron  L_1_A.ron  L_1_B.ron  M_1_A.ron  M_1_B.ron  M_2_A.ron  M_2_B.ron  O_1.ron  O_2.ron  O_3.ron  O_4.ron  P.ron  P_1.ron  P_2.ron  P_3.ron  P_4.ron  P_5.ron
testcases/imap/others/: X_1.ron  imapsieve_1.ron  utf8_only_1.ron  (+3 more)
testcases/pop3/: setup.ron  setup_opportunistic_encryption.ron
testcases/smtp/: setup.ron  setup_opportunistic_encryption.ron
tests/: certs.rs  create.rs  create_configs.rs
(+150 files in other folders)
