[package]
name = "fake_mail_server"
version = "0.1.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
edition = "2018"
default-run = "fake_mail_server"
license = "MIT OR Apache-2.0"

[dependencies]
ansi_term = "*"
anyhow = "*"
async-compression = { version = "*", features = ["tokio", "deflate"] }
async-trait = "*"
base64 = "0.21.5"
bounded-static = "*"
bytes = "*"
futures = "*"
itertools = "*"
lazy_static = "*"
mailparse = "*"
nom = "7"
pin-project = "*"
rand = "*"
regex = "*"
ron = "*"
serde = "*"
structopt = "*"
tokio-native-tls = "*"
tokio = { version = "*", features = ["rt-multi-thread", "io-util", "net", "time", "macros"] }
tracing = "*"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json", "env-filter"] }
zmq = "*"

smtp-codec = { version = "0.2", features = ["serdex"] }
pop3-codec = { version = "0.3", features = ["serdex"] }
imap-codec = { git = "https://github.com/duesee/imap-codec", rev = "0de65f21f98c0901f48880446d8621330c1d20a6", features = ["bounded-static", "starttls", "ext_idle", "ext_compress", "ext_enable", "ext_sasl_ir", "ext_login_referrals", "ext_mailbox_referrals", "serde"] }
